--- a/slides/isomorphic-PWA.html
+++ b/slides/isomorphic-PWA.html
@@ -41,7 +41,7 @@
                     Scalable JavaScript, PWA (Progressive Web Applications).
 
                     <small>Guntars Simanskis [Twitter](https://twitter.com/simanskis),
-                        [Github](https://github.com/gunins),
+                        [Github](https://github.com/gunins)
                     </small>
                 </script>
             </div>
